# DamageClassification

./: .gitattributes  README.md  index.ipynb  pyproject.toml  requirements.txt
damageclassification/: Best_Second_20_02092021.h5  DamageClassifiction.ipynb  First_Best_17_60821_test.h5  PyTorch_MNIST.ipynb  Pytorch_SimpleLinearRegression.ipynb  TensorFlow_MNIST.ipynb  TensorFlow_SimpleLinearRegression.ipynb  clustering.py  utils.py
damageclassification/Solutions/: Solution_DamageClassifiction.ipynb  Solution_PyTorch_MNIST.ipynb  Solution_TensorFlow_MNIST.ipynb
damageclassification/Solutions/.ipynb_checkpoints/: Solution_DamageClassifiction-checkpoint.ipynb
