[tool.poetry]
name = "damageclassification"
version = "0.1.0"
description = "Damage Classification in Dual Phase Steels using Deep Learning"
authors = ["Ulrich <ulrich.kerzel@rwth-aachen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
notebook = "^7.1.1"
tensorflow = "2.15"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
imageio = "^2.34.0"
torch = "1.13.1"
torchvision = "0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
